--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Merriweather:100,200,300,300i,400,400i,700');
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
+@import url("https://fonts.googleapis.com/css?family=Merriweather:100,200,300,300i,400,400i,700");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400");
 
 body {
   font-family: "Open Sans", serif;
@@ -17,7 +17,7 @@ body {
 .main {
   height: 90vh;
   background: #fff;
-  box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
+  box-shadow: 0px 13px 40px -13px rgba(0, 0, 0, 0.75);
   width: 80%;
   margin: 0 auto;
 }
@@ -37,7 +37,8 @@ body {
   font-size: 50px;
   letter-spacing: 2px;
   line-height: 1.3;
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
+  color: aqua;
 }
 
 .title-container__subtitle {
@@ -46,6 +47,7 @@ body {
   letter-spacing: 1px;
   line-height: 1.5;
   font-family: "Merriweather", serif;
+  color: aqua;
 }
 
 .form-container {
@@ -69,13 +71,13 @@ input[type="text"] {
   font-size: 20px;
 }
 
-input[type="text"] { 
-    outline: none;
+input[type="text"] {
+  outline: none;
 }
 
 input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 30px #2c3e50 inset;
-    -webkit-text-fill-color: #fff !important;
+  -webkit-box-shadow: 0 0 0 30px #2c3e50 inset;
+  -webkit-text-fill-color: #fff !important;
 }
 
 button {
@@ -105,7 +107,7 @@ button:active {
 
 .weather__key {
   color: #f16051;
-  border-bottom: solid 2px rgba(255,255,255,0.06);
+  border-bottom: solid 2px rgba(255, 255, 255, 0.06);
   padding: 20px 0 20px 0;
   font-weight: 400;
 }
